src/test/ui/parser/issue-14303-trait.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-trait.rs:13:18
   |
LL | trait Foo<'a, T, 'b> {}
   |                  ^^

error: aborting due to previous error

